# edfio

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
src/: edf_reader.rs  lib.rs  main.rs
src/edf_reader/: async_reader.rs  file_reader.rs  js_reader.rs  model.rs  python_reader.rs  sync_reader.rs
