[package]
name = "edfio"
version = "0.1.0"
authors = ["Craig Franklin <craigjfranklin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
pyo3 = { version = "0.13", features = ["extension-module"] }
chrono = "0.4.6"
serde = "1.0.89"
serde_derive = "1.0.89"
futures = "0.1.26"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
