[package]
name = "edfio"
version = "0.1.0"
authors = ["Craig Franklin <craigjfranklin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"
serde = "1.0.89"
serde_derive = "1.0.89"
futures = "0.1.26"
buffered_offset_reader = "0.6.0"
