[package]
name = "edfio"
version = "0.1.0"
authors = ["Craig Franklin <craigjfranklin@gmail.com>"]
edition = "2018"
exclude = ["index.node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.6"
serde = "1.0.89"
serde_derive = "1.0.89"
futures = "0.1.26"
buffered_offset_reader = "0.6.0"
libc = "0.2"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
neon = { version = "0.8", default-features = false, features = ["napi-6"] }
